# pos_restaurant_itb

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.json  continue.config.ts  fix_custom_field.py  fix_structure.py  hooks.py  hooks_update.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  test.yml
config/: desktop.py
fixtures/: module_def.json
pos_restaurant_itb/: MANIFEST.in  README.md  __init__.py  api.py  auth.py  boot.py  hooks.py  module.txt  modules.txt  patches.txt  permissions.py  setup.py
pos_restaurant_itb/api/: __init__.py  create_kot.py  get_attributes_for_item.py  get_available_tables.py  kds.py  kds_handler.py  kitchen_station.py  kitchen_station_handler.py  kot_status_update.py  load_pos_restaurant_config.py  pos_order_controller.py  print.py  resolve_variant.py  save_dynamic_attributes.py  send_to_kitchen.py  sendkitchenandcancel.py
pos_restaurant_itb/commands/: __init__.py  sync_kitchen_display.py
pos_restaurant_itb/config/: desktop.py
pos_restaurant_itb/event/: on_submit_pos_order.py  update_kot_status.py
pos_restaurant_itb/fixtures/: custom_field.json  custom_permission.json  generate_pos_table_name.json  kot_autoname.json  kot_status_update.json  role.json
pos_restaurant_itb/hooks/: sla_log_hook.py
pos_restaurant_itb/pos_restaurant_itb/: __init__.py  module.txt
pos_restaurant_itb/print_format/: kot_print.html
pos_restaurant_itb/print_formats/: bluetooth_receipt.html  table_qr_cards.html  thermal_receipt.html
pos_restaurant_itb/tests/: test_kot_item.py  test_pos_order.py
tests/: test_pos_order.py
(+157 files in other folders)
