[project]
name = "pos_restaurant_itb"
version = "1.0.0"
description = "POS Restaurant module for ERPNext"
authors = [
    { name = "PT. Innovasi Terbaik Bangsa", email = "info@inovasiterbaik.co.id" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.frappe]
framework = "frappe"
frappe_version = "15.x.x"
