[project]
name = "pos_restaurant_itb"
version = "1.0.0"
description = "POS Restaurant module for ERPNext"
authors = [
    { name = "PT. Innovasi Terbaik Bangsa" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe]
framework = "frappe"
frappe_version = "15.x.x"